# aws-lambda-cli

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml  main.yml
aws_lambda_cli/: __init__.py  __main__.py  build.py
aws_lambda_cli/cli/: __init__.py  configure.py  function.py  root.py  utils.py
src/: __main__.py  cli.py  utils.py
