[tool.poetry]
name = "aws-lambda-cli"
version = "0.1.0"
description = "A simple CLI for building and publishing AWS Lambda functions."
authors = ["Hassan Abouelela <hassan@hassanamr.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
package-mode = true
homepage = "https://github.com/HassanAbouelela/aws-lambda-cli"
repository = "https://github.com/HassanAbouelela/aws-lambda-cli"
keywords = ["aws", "lambda", "serverless", "botocore", "boto3"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/HassanAbouelela/aws-lambda-cli/issues"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1"
click = "^8"

[tool.poetry.group.types.dependencies]
boto3-stubs-lite = {version = "*", extras = ["lambda", "boto3"]}

[tool.poetry.scripts]
lambda = "aws_lambda_cli.cli:cli"
